# BTAS

./: .gitignore  CMakeLists.txt  COPYING  README.md  TECHNICAL_REVIEW.md  benchmark_data_analysis.py  benchmark_main.c  benchmark_main.cpp  best_filter_uniq_ints.go  btas.c  btas.h  btas_benchmark_main.c  btas_bm_main_dataIO.c  btas_bm_main_fio.c  data_io.c  data_io.h  data_loader.h  filter_uniq_ints.c  filter_uniq_ints.go  filter_uniq_ints.h  filter_uniq_ints_cpp.cpp  filter_uniq_ints_cpp.hpp  filter_uniq_ints_improved.go  fui_main.c  main.c  main.cpp
golang/: benchmark_results.txt  results.txt
redis_bm/: redis_benchmark.py
